@@ -21,22 +21,15 @@
 #define __SMTP_SERVER_H__
 
 #include <gtk/gtk.h>
-#include "libbalsa.h"
+#include "server.h"
 
-#define LIBBALSA_TYPE_SMTP_SERVER				\
-    (libbalsa_smtp_server_get_type())
-#define LIBBALSA_SMTP_SERVER(obj)				\
-    (G_TYPE_CHECK_INSTANCE_CAST(obj, LIBBALSA_TYPE_SMTP_SERVER,	\
-                                LibBalsaSmtpServer))
-#define LIBBALSA_SMTP_SERVER_CLASS(klass)			\
-    (G_TYPE_CHECK_CLASS_CAST(klass, LIBBALSA_TYPE_SMTP_SERVER,	\
-                             LibBalsaSmtpServerClass))
-#define LIBBALSA_IS_SMTP_SERVER(obj)				\
-    (G_TYPE_CHECK_INSTANCE_TYPE(obj, LIBBALSA_TYPE_SMTP_SERVER))
-#define LIBBALSA_IS_SMTP_SERVER_CLASS(klass)			\
-    (G_TYPE_CHECK_CLASS_TYPE(klass, LIBBALSA_TYPE_SMTP_SERVER))
+#define LIBBALSA_TYPE_SMTP_SERVER (libbalsa_smtp_server_get_type())
 
-GType libbalsa_smtp_server_get_type(void);
+G_DECLARE_FINAL_TYPE(LibBalsaSmtpServer,
+                     libbalsa_smtp_server,
+                     LIBBALSA,
+                     SMTP_SERVER,
+                     LibBalsaServer)
 
 LibBalsaSmtpServer *libbalsa_smtp_server_new(void);
 LibBalsaSmtpServer *libbalsa_smtp_server_new_from_config(const gchar *
