@@ -1,5 +1,15 @@
 2019-06-08  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
+	Use G_DECLARE_FINAL_TYPE to declare LibBalsaSmtpServer
+
+	The object was already private.
+
+	* libbalsa/smtp-server.c (libbalsa_smtp_server_finalize),
+	(libbalsa_smtp_server_class_init), (libbalsa_smtp_server_init):
+	* libbalsa/smtp-server.h:
+
+2019-06-08  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
 	Use G_DECLARE_FINAL_TYPE to declare LibBalsaImapServer
 
 	The object was already private.
